--- a/public/wix/Deploy/Product.wxs
+++ b/public/wix/Deploy/Product.wxs
@@ -13,17 +13,17 @@
 		<Directory Id='TARGETDIR' Name='SourceDir'>
 			<Directory Id='AppDataFolder' Name='AppData'>
 				<Directory Id='ActiveState' Name='ActiveState'>
-					<Directory Id='INSTALLDIR' Name='bin'>
-						<Component Id='MainExecutable' Guid='7CF56E89-AA69-4A35-921C-F2CA2F9FE12B'>
+					<!-- TODO: Find a way to set this dynamically with the project namespace -->
+					<Directory Id='INSTALLDIR' Name='Language'>
+						<Component Id='DeployDir' Guid='7CF56E89-AA69-4A35-921C-F2CA2F9FE12B'>
 							<RemoveFolder Id='INSTALLDIR' On='uninstall' />
-							<RemoveFolder Id='MainExecutable' On='uninstall' />
 							<!-- Required by WiX -->
 							<RegistryValue Root='HKCU' Key='Software\[Manufacturer]\[ProductName]' Type='string' Value='' KeyPath='yes' />
 							<!-- TODO: This File Id should not be needed as state deploy should be able to take care of that -->
 							<!-- <File Id='StateEXE' Name='state.exe' DiskId='1' Source='..\..\build\state.exe'  /> -->
 							<!-- This utility element uses a custom install directory value to remove the state tool on uninstallation -->
 							<!-- TODO: Right now this is removing the state tool installation! Need to address -->
-							<util:RemoveFolderEx Id="RemoveAdditionalFiles" On="uninstall" Property="REMOVAL"/>
+							<util:RemoveFolderEx On="uninstall" Property="REMOVAL"/>
 						</Component>
 					</Directory>
 				</Directory>
@@ -31,13 +31,11 @@
 		</Directory>
 
 		<Feature Id='Complete' Level='1'>
-			<ComponentRef Id='MainExecutable' />
+			<ComponentRef Id='DeployDir' />
 			<Component Id='InstallHelper' Directory="INSTALLDIR" Guid='4dda6117-ca9c-4371-a09d-c8575f520a01'>
 				<!-- We save the value of the install directory to the registry so we can retrieve it on uninstall -->
 				<RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Name="CompleteRemoval" Value="[INSTALLDIR]" Type="string"/>
 				<RemoveFolder Id='CleanupApplicationFolder' On='uninstall' />
-				<!-- Set the PATH environment variable to the installation directory of the State Tool -->
-				<Environment Id='UpdatePath' Name='PATH' Action='set' System='no' Part='first' Value='[INSTALLDIR]' />
 			</Component>
 		</Feature>
 
@@ -45,14 +43,6 @@
 			<!-- Retrieve the value of the installation directory from the registry -->
 			<RegistrySearch Id="RemovalProperty" Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Name="CompleteRemoval" Type="raw" />
 		</Property>
-
-		<Binary Id="StateCommandCA" SourceFile="$(var.StateCommandExists.TargetDir)$(var.StateCommandExists.TargetName).CA.dll" />
-		<CustomAction Id="StateCommandExists" Impersonate="no" BinaryKey="StateCommandCA" DllEntry="StateCommandExists" Return="check" />
-
-		<Binary Id="GetProjectNameCA" SourceFile="$(var.GetProjectName.TargetDir)$(var.GetProjectName.TargetName).CA.dll" />
-		<CustomAction Id="GetProjectName" Impersonate="no" BinaryKey="GetProjectNameCA" DllEntry="GetProjectName" Return="check" />
-
-		<Binary Id="rmpath.exe" SourceFile="C:\Users\miked\work\cli\public\wix\rmpath\rmpath.exe" />
 
 		<UI Id="WixUI_InstallDir">
 			<TextStyle Id="WixUI_Font_Normal" FaceName="Tahoma" Size="8" />
@@ -129,10 +119,25 @@
 		<!-- This currently only works when we are updating the USER path -->
 		<CustomAction Id="RemoveInstallPath" BinaryKey="rmpath.exe" Return="ignore" Execute="commit" ExeCommand='[INSTALLDIR]' />
 
+		<Binary Id="StateCommandCA" SourceFile="$(var.StateCommandExists.TargetDir)$(var.StateCommandExists.TargetName).CA.dll" />
+		<CustomAction Id="StateCommandExists" Impersonate="no" BinaryKey="StateCommandCA" DllEntry="StateCommandExists" Return="check" />
+
+		<Binary Id="GetProjectNameCA" SourceFile="$(var.GetProjectName.TargetDir)$(var.GetProjectName.TargetName).CA.dll" />
+		<CustomAction Id="GetProjectName" Impersonate="no" BinaryKey="GetProjectNameCA" DllEntry="GetProjectName" Return="check" />
+
+		<Binary Id="StateDeployCA" SourceFile="$(var.StateDeploy.TargetDir)$(var.StateDeploy.TargetName).CA.dll" />
+		<CustomAction Id="StateDeploy" Impersonate="no" BinaryKey="StateDeployCA" DllEntry="StateDeploy" Return="check" />
+
+		<Binary Id="UninstallCA" SourceFile="$(var.Uninstall.TargetDir)$(var.Uninstall.TargetName).CA.dll" />
+		<CustomAction Id="Uninstall" Impersonate="no" BinaryKey="UninstallCA" DllEntry="Uninstall" Return="check" />
+
+		<Binary Id="rmpath.exe" SourceFile="C:\Users\miked\work\cli\public\wix\rmpath\rmpath.exe" />
 
 		<InstallExecuteSequence>
-			<Custom Action="StateCommandExists" After="InstallInitialize" />
-			<Custom Action="GetProjectName" After="StateCommandExists" />
+			<Custom Action="StateCommandExists" After="InstallInitialize">NOT Installed</Custom>
+			<Custom Action="GetProjectName" After="StateCommandExists">NOT Installed</Custom>
+			<Custom Action="StateDeploy" After="GetProjectName">NOT Installed</Custom>
+			<Custom Action="Uninstall" After="RemoveFiles">REMOVE="ALL"</Custom>
 		</InstallExecuteSequence>
 	</Product>
 </Wix>
