--- a/public/wix/Deploy/Product.wxs
+++ b/public/wix/Deploy/Product.wxs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 	<Product Id="*" Name="ActiveState Language Installer" Language="1033" Version="1.0.0.0" Manufacturer="ActiveState" UpgradeCode="a8b44798-ee47-4404-8ae3-d821e603b426">
 		<Package Id='*' Keywords='Installer' Description="ActiveState's Language Installer"
             Comments='State Tool is a registered trademark of ActiveState' Manufacturer='ActiveState'
@@ -17,7 +17,6 @@
 							<RemoveFolder Id='INSTALLDIR' On='uninstall' />
 							<!-- Required by WiX -->
 							<RegistryValue Root='HKCU' Key='Software\[Manufacturer]\[ProductName]' Type='string' Value='' KeyPath='yes' />
-							<util:RemoveFolderEx On="uninstall" Property="REMOVAL"/>
 						</Component>
 					</Directory>
 				</Directory>
